# MediaMind

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
backend/: README.md  mediamind.spec  pyproject.toml
backend/src/mediamind/: __init__.py  __main__.py  config.py  logging_setup.py
backend/src/mediamind/api/: app.py  models.py  models_archive.py  models_fs_ops.py  models_gallery.py  models_search.py  security.py  ws.py
backend/src/mediamind/api/routes/: duplicates.py  files.py  fs.py  (+8 more)
backend/src/mediamind/core/: archive.py  concurrency.py  dedupe.py  explorer_media.py  file_facts.py  folder_stats.py  fsops.py  gallery.py  hashing.py  jobs.py  libraries.py  loaders.py  media_index.py  oplog.py  organize_plan.py  organizer.py  pathsafe.py  quick_access.py  recent.py  safety.py  scanner.py  search.py  settings.py  thumbnails.py
backend/src/mediamind/providers/: base.py  catalog.py  downloads.py  fake.py  insightface_provider.py  manager.py  opencv_provider.py
backend/src/mediamind/store/: audit.py  db.py  duplicates.py  embeddings.py  persons.py
backend/tests/: conftest.py  test_api.py  test_db_migration.py  test_dedupe.py  test_duplicates_api.py  test_duplicates_dismissal.py  test_e2e_real_media.py  test_face_scan_runner.py  test_faces_pipeline.py  test_files_api.py  test_fs_api.py  test_fs_ops_api.py  test_insightface_integration.py  test_jobs.py  test_m6_api.py  test_multi_person.py  test_opencv_provider.py  test_organize_plan.py  test_persons_store.py  test_provider_manager.py  test_safety.py  test_scanner.py  test_scans_api.py  test_store.py  test_ws.py
(+144 files in other folders)
